# tui_chat

./: .gitignore  README.md
client/tui-chat-client/: package-lock.json  package.json
client/tui-chat-client/public/: index.html
client/tui-chat-client/src/: index.tsx
client/tui-chat-client/src/css/: App.css
client/tui-chat-client/src/pages/: index.tsx  not_found.tsx
server/: Cargo.toml  config.example.toml
server/src/: configuration.rs  db.rs  lib.rs  main.rs  startup.rs  utils.rs
server/src/models/: chat.rs
server/src/routes/: filters.rs  mod.rs
server/src/routes/handlers/: auth.rs  chat.rs  health_check.rs  login.rs  mod.rs  server.rs
server/test-util/: Cargo.toml
server/test-util/src/: lib.rs
server/tests/: health_check.rs  login.rs  server.rs
