[package]
name = "tui-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tui-chat-server"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["net"] }
warp = "0.3"
serde = {version = "1.0.197", features = ["derive"]}
mysql = "24.0.0"
sha2 = "0.10.8"
rand_core = "0.6.4"
chrono = "0.4.35"
http = "1.1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
test-util = { path = "test-util" }
