[package]
name = "tui-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tui-chat-server"

[dependencies]
config = "0.14"
futures-util = "0.3"
mysql = "24.0.0"
rand_core = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"
warp = "0.3"
block-id = "0.2.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
test-util = { path = "test-util" }
